--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         </p>
         
         <div class="images">
-            <img src="https://images.unsplash.com/photo-1589254065878-42c9dc13d7e4?auto=format&fit=crop&q=80&w=2400" alt="Futuristic female android close-up">
-            <img src="https://images.unsplash.com/photo-1613310023042-ad79300a41ac?auto=format&fit=crop&q=80&w=2400" alt="Elegant cyber woman portrait">
-            <img src="https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?auto=format&fit=crop&q=80&w=2400" alt="Advanced feminine humanoid robot">
+            <img src="https://i.imgflip.com/ahimqz.jpg" alt="Futuristic female android close-up">
+            <img src="https://i.imgflip.com/ahimvc.jpg" alt="Elegant cyber woman portrait">
+            <img src="https://i.imgflip.com/ahiozt.jpg" alt="Advanced feminine humanoid robot">
         </div>
 
         <script>
